fixed footer to bottom, fixed flicker modal issue and flickering dropdown issue on amdin page, added styling to reservs. on item info page

--- a/Angular/frontend/src/app/app.component.css
+++ b/Angular/frontend/src/app/app.component.css
@@ -8,7 +8,10 @@
     height: 30px;
  }
 
- .footer{
-    height: 1px;
+ footer {
+   position: absolute;
+   left: 0;
+   bottom: 0;
+   height: 40px;
+   width: 100%;
  }
-
